# polysolve

./: LICENSE  polysolve.py  pyproject.toml
.github/workflows/: test_florp.yml
docs/source/: conf.py  index.rst
polysolve/: __init__.py  polysolve.py  pyproject.toml
tests/: test_quadratic.py
